--- a/package.json
+++ b/package.json
@@ -10,5 +10,11 @@
   "license": "MIT",
   "peerDependencies": {
     "socket.io": "^4.1.3"
+  },
+  {
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/ratquaza/modular-socket.io.git"
   }
+}
 }
